[package]
name = "check-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
futures = "0.3"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15.0"

